@startuml
skinparam monochrome true
skinparam shadowing false
skinparam TitleFontSize 20
skinparam sequenceTitleFontSize 20
skinparam sequenceTitleFontStyle plain

skinparam class {
	BackgroundColor white
	BackgroundColor<<Warning>> lightblue
}

title Structure du programme

class Symbole{

}

class Automate{

}

Automate ---> Symbole : stack<Symbole*>\n pileSymboles
Automate ---> Etat : stack<Etat*>\n pileEtats
Automate ---> Lexeur : lexeur
Automate ---> Programme : programme

class Etat{

}

class Programme{

}


class TableDesSymboles{
}



class Lexeur{

}

@enduml